Centered all elements; resized logo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
-    <img src="logo.png" alt="logo">
-    <h1>Welcome to le Wagon</h1>
+    <div class="container">
+      <img id="logo" src="logo.png" alt="logo">
+      <h1>Welcome to le Wagon</h1>
+    </div>
   </body>
 </html>
